2006-04-20  David Gilbert  <david.gilbert@object-refinery.com>

	* java/sql/Array.java: Fixed Eclipse API doc warnings,
	* java/sql/Blob.java: Likewise,
	* java/sql/CallableStatement.java: Likewise,
	* java/sql/Clob.java: Likewise,
	* java/sql/Connection.java: Likewise,
	* java/sql/DatabaseMetaData.java: Likewise,
	* java/sql/Date.java: Likewise,
	* java/sql/Driver.java: Likewise,
	* java/sql/PreparedStatement.java: Likewise,
	* java/sql/ResultSet.java: Likewise,
	* java/sql/ResultSetMetaData.java: Likewise,
	* java/sql/SQLData.java: Likewise,
	* java/sql/SQLOutput.java: Likewise,
	* java/sql/SQLWarning.java: Likewise,
	* java/sql/Statement.java: Likewise,
	* java/sql/Time.java: Likewise,
	* java/sql/Timestamp.java: Likewise.

2006-04-20  David Gilbert  <david.gilbert@object-refinery.com>

	* java/sql/DriverManager.java
	(setLoginTimeout): Use incoming argument,
	(setLogStream): Likewise,
	(println): Fix API doc comment.

2006-04-20  David Gilbert  <david.gilbert@object-refinery.com>

	* javax/swing/JMenuItem.java
	(paramString): Updated API docs,
	(getAccessibleContext): Added API docs,
	(AccessibleJMenuItem.stateChanged): Marked as stub,
	(AccessibleJMenuItem.getAccessibleRole): Added API docs,
	* javax/swing/JSlider.java
	(paramString): Fix for API docs,
	* javax/swing/JToolTip.java
	(getAccessibleContext): Fix for API docs.

2006-04-20  David Gilbert  <david.gilbert@object-refinery.com>

	* javax/swing/JRadioButtonMenuItem.java
	(paramString): Reimplemented,
	(getAccessibleContext): API docs added,
	(AccessibleJRadioButtonMenuItem.AccessibleJRadioButtonMenuItem()): 
	Likewise,
	(AccessibleJRadioButtonMenuItem.getAccessibleRole): Likewise.

2006-04-20  Audrius Meskauskas  <AudriusA@Bioinformatics.org>

	* javax/swing/plaf/basic/BasicTreeUI.java
	(finish): Invalidate path bounds.
	(getMaxHeight): Set the row height to the layout cache.
	(startEditing): Do not request to recalculated 
	row height and preferred size.
	* javax/swing/tree/DefaultTreeCellEditor.java