@@ -1,5 +1,5 @@
 /* BasicTextFieldUI.java
-   Copyright (C) 2004  Free Software Foundation, Inc.
+   Copyright (C) 2004, 2006,  Free Software Foundation, Inc.
 
 This file is part of GNU Classpath.
 
@@ -38,7 +38,6 @@ exception statement from your version. */
 
 package javax.swing.plaf.basic;
 
-import java.awt.Color;
 import java.beans.PropertyChangeEvent;
 
 import javax.swing.JComponent;
